# coinflip

./: .appveyor.yml  .bumpversion.cfg  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  index.html  pyproject.toml  report.html  setup.cfg  setup.py  style.css  tox.ini
.github/: FUNDING.yml
.github/workflows/: publish.yml  release.yml  toxtests.yml  wintest.yml
.report_files/: fixed-pitch.el  header.tex  refs.bib  report.org
.video_files/: video.kdenlive
.video_files/music/: licenses.txt
.video_files/sessions/: Introduction.ipynb  rng_output.txt  rng_output2.txt  sesh_cli.sh  sesh_intro.sh  sesh_randtests.sh  sesh_testing.sh
.video_files/thumb/: thumb.xcf
CS3270/: README.md
CS3270/.report_files/: header.tex  refs.bib  report.tex
docs/: commands.rst  conf.py  index.rst  installation.rst  requirements.txt  usage.rst
docs/api/: index.rst  stattests-public.rst
docs/api/stattests/: common.rst  fourier.rst  frequency.rst  index.rst  matrix.rst  runs.rst  template.rst  universal.rst
docs/api/stattests-private/: index.rst  matrix.rst  template.rst  universal.rst
docs/api/wrapper/: cli.rst  generators.rst  index.rst
docs/reference/: algos.rst  generators.rst  index.rst  prng.rst  randtests.rst  stattests-public.rst  store.rst  testing.rst  tests_runner.rst
docs/reference/randtests/: _collections.rst  _decorators.rst  _exceptions.rst  _plots.rst  _pprint.rst  _result.rst  _tabulate.rst  _testutils.rst  fourier.rst  frequency.rst  index.rst  matrix.rst  runs.rst  template.rst  universal.rst
docs/reference/stattests/: _collections.rst  _decorators.rst  _exceptions.rst  _plots.rst  _pprint.rst  _result.rst  _tabulate.rst  _testutils.rst  fourier.rst  frequency.rst  index.rst  matrix.rst  runs.rst  template.rst  universal.rst
docs/reference/stattests-private/: fourier.rst  frequency.rst  runs.rst
docs/reference/wrapper/: index.rst  store.rst  tests_runner.rst
docs/src/: conf.py
docs/src/reference/: algorithms.rst  collections.rst  index.rst
src/coinflip/: __init__.py  __main__.py  _cli.py  _parsing.py  _patch_dataclasses_json.py  _patches.py  _pprint.py  _refimpl.py  _report.py  _runner.py  algorithms.py  cli.py  collections.py  data.py  encoders.py  exceptions.py  generators.py  pprint.py  randtests.py  randtests_refimpl.py  refimpl.py  report.py  serialize.py  store.py  tests_runner.py  typing.py
src/coinflip/_randtests/: __init__.py  complexity.py  cusum.py  entropy.py  excursions.py  fourier.py  frequency.py  matrix.py  pprint.py  random_walk.py  runs.py  serial.py  template.py  testutils.py  universal.py
src/coinflip/cli/: __init__.py  commands.py  parsing.py  pprint.py  report.py  runner.py
src/coinflip/randtests/: __init__.py  _collections.py  _decorators.py  _pprint.py  _result.py  _testutils.py  complexity.py  cusum.py  entropy.py  excursions.py  fourier.py  frequency.py  matrix.py  runs.py  serial.py  template.py  universal.py
src/prng/: __main__.py  cli.py  profiling.py  runner.py  store.py  tests.py
src/rngtest/: __main__.py  cli.py  generators.py  profiling.py  report.py  slugify.py  store.py  tests.py  tests_runner.py
templates/: index.html
templates/randtests/: monobit.html
tests/: README.rst  conftest.py  strategies.py  test_algorithms.py  test_algos.py  test_cli.py  test_frequency.py  test_implementations_on_examples.py  test_localrun.py  test_prng.py  test_rngtest.py  test_routes.py  test_serialization.py  test_serialize.py  test_states.py  test_stattests.py  test_stattests_on_examples.py  test_stattests_on_implementations.py
tests/collections/: test_bins.py  test_defaultlist.py
tests/implementations/: dj.py  steven.py
tests/randtests/: README.rst  conftest.py  e_expansion.txt  examples.py  strategies.py  test_compare_implementations.py  test_comparisons.py  test_examples.py  test_randtests.py  test_refimpl.py  test_smoke.py  test_testutils.py
tests/stattests/: conftest.py  strategies.py  test_compare_implementations.py  test_examples.py
(+94 files in other folders)
