[tool.poetry]
name = "coinflip"
version = "0.1.3"
description = "Randomness testing for humans"
readme = "README.rst"
license = "BSD-3-Clause"
authors = ["Matthew Barber <quitesimplymatt@gmail.com>"]
repository = "https://github.com/Honno/coinflip"
documentation = "https://coinflip.readthedocs.io/"
keywords = ["rng", "nist", "rngtest", "randomness", "randomness-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: BSD License",
    "Topic :: Utilities",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
    "Environment :: Console",
]
include = ["LICENSE.md", "*.rst", "templates/", "docs/", "tests/"]

[tool.poetry.scripts]
coinflip = 'coinflip.cli.commands:main'


[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
pandas = "^1.1.4"
scipy = "^1.5.4"
rich = "^9.2.0"
Jinja2 = "^2.11.2"
altair = "^4.1.0"
typing-extensions = "^3.7.4"
click = "^7.1.2"
sortedcontainers = "^2.3.0"

# optional deps for use in extras

# refimpl
more-itertools = {version = "^8.6.0", optional = true}

# testing
tox = {version = "^3.20.1", optional = true}
pytest = {version = "^6.1.2", optional = true}
hypothesis = {version = "^5.41.2", optional = true}
pytest-timeout = {version = "^1.4.2", optional = true}
defaultlist = {version = "^1.0.0", optional = true}

# docs
sphinx = {version = "^3", optional = true}
sphinx-rtd-theme = {version = "^0.5.0", optional = true}
sphinx-click = {version = "^2.5.0", optional = true}

[tool.poetry.extras]
refimpl = ["more-itertools"]
test = ["tox", "pytest", "hypothesis", "pytest-timeout", "defaultlist"]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-click"]

[tool.poetry.dev-dependencies]
pre-commit = "^2.8.2"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
